# qsiapi

./: Makefile  Makefile.am  Makefile.in  MyMainFrame.cxx  MyMainFrame.h  MyMainFrame_rdict.pcm  app.cpp  qsiapp.cpp
